--- a/style.css
+++ b/style.css
@@ -35,14 +35,16 @@ label[for="scrollbox"] {
 
 /* Style the second segments */
 .second-segment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-left: 30px;
     padding-top: 30px;
     padding-right: 30px;
     width: 300px;
 }
-.description {
-    padding-left: 20px;
-}
+.description {}
+.ongoing-game {}
 
 /* Style the third segments */
 .third-segment {
@@ -51,6 +53,10 @@ label[for="scrollbox"] {
     align-items: center;
     justify-content: center;
     background-color: #f5f5f5;
+}
+.ongoing-rating {
+    width: 50%;
+    height: auto;
 }
 
 /* Style the list entry media art */
